# ChristmasSocks

./: Dockerfile  Makefile  README.md
ChristmasSocks/: CMakeLists.txt  compile.py  compile.sh  configure.ini  configure.py  install.sh  pytest.ini  setup.sh  uninstall.sh
ChristmasSocks/include/: clients.h  command_line_interface.h  config_file.h  constants.h  header_footer.h  ipc_signal_registers.h  logger.h  main.h  server.h  utilities.h
ChristmasSocks/src/: clients.cpp  command_line_inteface.cpp  command_line_interface.cpp  config_file.cpp  constants.cpp  header_footer.cpp  ipc_signal_registers.cpp  logger.cpp  main.cpp  server-oo.cpp  server.cpp  tests.cpp  utilities.cpp
ChristmasSocks/src/client/: client.py  socks.ini  socks.py
ChristmasSocks/src/client/configs/: socks.ini
ChristmasSocks/src/client/core/: consts.py  panel.py  panel_base.py  panel_ping.py  panel_sysinfo.py
ChristmasSocks/src/commands/: command_get_kernel_info.cpp  command_sleep.cpp
ChristmasSocks/src/configs/: socks.ini
ChristmasSocks/src/frontend/: command_line_interface.cpp  command_line_interface.h  help_menu.cpp  help_menu.h
ChristmasSocks/src/logging/: logger.cpp  logger.h
ChristmasSocks/src/server/: clients.h  commands.cpp  commands.h  epoll_server.cpp  epoll_server.h  incoming_client_primitives.cpp  incoming_client_primitives.h  log_system_configs.cpp  log_system_configs.h  main.cpp  resolve_master_host.cpp  server.cpp  server_primitives.cpp  server_primitives.h  sysconfig_pipeline.cpp  sysconfig_pipeline.h  system_configurations.cpp  system_configurations.h
ChristmasSocks/src/server/commands/: command_get_kernel_info.cpp  command_get_kernel_info.h  command_help.cpp  command_help.h  command_sleep.h  command_uptime.cpp  command_uptime.h
ChristmasSocks/src/server/configs/: socks.ini
ChristmasSocks/src/server/frontend/: command_line_interface.cpp  command_line_interface.h  header_footer.cpp  help_messages.cpp  help_messages.h  parse_config_file.cpp  parse_config_file.h
ChristmasSocks/src/server/logging/: logger.h
ChristmasSocks/src/server/server/: commands.cpp  commands.h  epoll_server.cpp  epoll_server.h  incoming_client_primitives.cpp  incoming_client_primitives.h  log_system_configs.cpp  log_system_configs.h  resolve_master_host.cpp  resolve_master_host.h  server_primitives.cpp  server_primitives.h
ChristmasSocks/src/server/utilities/: configs.h  constants.cpp  ipc_signal_registers.cpp  resolve_host.cpp  resolve_host.h  utilities.cpp  utilities.h
ChristmasSocks/src/utilities/: config_file_parser.cpp  config_file_parser.h  constants.cpp  constants.h  get_line_breaks.cpp  get_line_breaks.h  utilities.cpp  utilities.h
ChristmasSocks/systemd/: socks.service
ChristmasSocks/tests/: client.ini  client.py  conftest.py  consts.py  pytest.ini  run_tests.py  test_block_multiple_servers.py  test_client_hangup.py  test_command_line_interface.py  test_command_line_interface_help_menu.py  test_commands.py  test_exit_command.py  test_foo.py  test_hostname_resolution.py  test_invalid_parameters.py  test_line_break_toggler.py  test_memory_basic.py  test_multiple_connections.py  test_multiple_connections_2.py  test_non_exit_commands.py  test_protocol.py  test_release_command_line_interface.py  test_release_exit_command.py  test_release_multiple_connections.py  test_release_protocol.py  test_release_protocol_2.py  test_various_line_breaks.py  test_whitelist.py  test_whitelist_2.py  tests.ini  utils.py
ChristmasSocks/tests/server/: test_command_line_interface.py  test_commands.py  test_hostname_resolution.py  test_release_protocol.py  test_whitelist.py  utils.py
ChristmasSocks/tests/valgrind-suppressions/: epoll_ctl.supp
docs/: socks_architecture.drawio
other/: layout.pages  optical_table_calculations.numbers
